Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-20822

Erase diverged branch correctly from Failover table

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • 4.6.0
    • 3.1.6, 4.0.0, 4.1.2, 4.5.0
    • couchbase-bucket
    • None
    • Untriaged
    • No

    Description

      In the for loop at http://src.couchbase.org/source/xref/4.5.0/ep-engine/src/failover-table.cc#59
      table.erase() increments the iterator and we increment the iterator in the for loop as well. Hence, by double incrementing the iterator we will not remove all the entries that are supposed to be removed.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              ericcooper Eric Cooper (Inactive)
              manu Manu Dhundi (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              11 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty